--- a/src/stylesheet/modules/_badge.scss
+++ b/src/stylesheet/modules/_badge.scss
@@ -3,7 +3,7 @@
   padding: 4px 10px;
   min-width: 40px;
 
-  border-radius: 20px;
+  border-radius: 50px;
   text-align: center;
   vertical-align: middle;
 
@@ -14,12 +14,18 @@
   &.badge-primary {
     color: map-get($colors, "primary");
     background-color: map-get($colors, "primary-50");
-    // border: 0.5px solid map-get($colors, "primary");
 
     &:hover {
       background-color: map-get($colors, "primary");
       color: map-get($colors, "white");
-      // border: 0.5px solid map-get($colors, "primary");
     }
+  }
+
+  &.text-truncate {
+    max-width: 90px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
   }
 }
